[package]
name = "keez"
version = "0.1.0"
authors = ["Paul <paul@ravi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.45.0"
rusoto_ssm = "0.45.0"
structopt = "0.3.17"
envy-store = "0.1.0"
tokio = "0.1"
serde = "1.0"
