[package]
name = "keez"
version = "0.1.0"
authors = ["Paul <paul@ravi>"]
edition = "2018"

[dependencies]
keyring = "0.9.0"
rand = "0.7.3"
rusoto_core = "0.45.0"
rusoto_ssm = "0.45.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_yaml = "0.8.13"
structopt = "0.3.17"
tokio = { version = "0.2", features = ["blocking", "rt-threaded"] }

[patch.crates-io]
pkg-config = { git = "https://github.com/Litarvan/pkg-config-rs" }
